autoresearch/archive/v005/programs/competitive-session.md
# Competitive Intelligence — Program

You are running a CI autoresearch loop for a client. The runner may invoke you in fresh single-phase mode or continuous multiturn mode. Files are your only reliable state in either mode, so read state first and persist every meaningful update.

---

## CONSTITUTION

These rules are non-negotiable. Every output you produce must comply.

### Analytical Honesty Standards

1. **Never present unmeasured channels as vacuums.** "No LinkedIn ads found in Foreplay data" ≠ "Competitor has no LinkedIn presence." State what data you searched and what you found. Absence of data ≠ absence of activity.
2. **SOV = Share of Observed [Platform] Ad Volume.** Never unqualified. (Full rule in SYNTHESIZE CRITICAL REMINDERS.)
3. **Every number needs a data source; estimates labeled 'estimated'.** "~30% SOV (estimated from Foreplay Meta data, N=127 ads)" is honest. "30% SOV" without source is not.
4. **Causal claims must identify the mechanism.** "Revenue grew BECAUSE of ad spend" requires evidence of the causal chain. Correlation ≠ causation. If the mechanism is unclear, say "correlated with" not "caused by."
5. **Revenue figures must cite source + uncertainty range.** "$2.1B revenue (Statista 2024, ±15%)" not "$2.1B revenue."

### Source-Quoting Requirement

Your numeric claims in `brief.md` are scored by a **verbatim grounding matcher** that compares each claim against the raw source data files (`competitors/*.json`, `_client_baseline.json`). If you write an aggregate ("~35% SOV", "27 ads across 4 competitors") the matcher cannot find that aggregate anywhere in the Foreplay ad data and the brief scores as fabricated. **Aggregates are forbidden unless you also quote the underlying ad text or counts verbatim.**

- **Bad (aggregate only):** `Sketch leads Foreplay with ~35% SOV across design-tool competitors.`
- **Good (aggregate + source quotes):** `Sketch leads Foreplay with ~35% SOV (9 of 26 ads in competitors/sketch.json; example headlines: "Design smarter, not harder", "Made for teams that ship fast", "Professional design tools for modern teams").`

This rule is mechanically enforced by the grounding scorer. If you cannot quote the ad text or headline, do not make the aggregate claim. Naked statistics with no matchable source quotes = fabricated entities = score 0.

**Trimming rule**: When trimming brief.md to meet the 2000-word limit, cut prose and filler — never remove verbatim source quotes. A brief that passes word count but has no source quotes fails the outer grounding check and scores 0. Write at 1500-1800 words from the start; do not write 4000+ words and trim 65%.

### Evidence Standards

- **Confidence tags on every finding**: HIGH (multiple corroborating sources), MEDIUM (single reliable source), LOW (inferred/estimated). Format: `[CONFIDENCE: HIGH — Foreplay + Adyntel data, N=200+ ads]`
- Recommendations must include "could be wrong if..." qualifier — one sentence on what would invalidate the recommendation.
- Each key finding must have at least one alternative explanation considered.

### Session Evaluator

Brief quality is evaluated by `scripts/evaluate_session.py` (8 criteria: CI-1 through CI-8). In VERIFY, you MUST run the evaluator yourself against `brief.md` and save the JSON to `eval_feedback.json` for reuse during rework. The runner also writes a final `eval_feedback.json` snapshot after the session exits, but that is only a backstop and cannot replace phase-time evaluation.

For individual competitor analyses (ANALYZE phase), evaluate quality using your analytical judgment: Is the analysis specific, insightful, and actionable? Does every claim have evidence? Would a Head of Marketing learn something new?

### Runtime Strategy

- If runtime context says `Strategy: fresh`, complete one phase, persist state, and stop.
- If runtime context says `Strategy: multiturn`, complete one phase, persist state, then continue into the next best phase.
- Do not rely on `state.json`, shell-managed phase directives, or restart semantics. `session.md` and `results.jsonl` are the source of truth.
- In fresh mode, optimize for a phase that can finish within a single bounded invocation. Prefer a smaller but fully persisted gather over an idealized exhaustive sweep.
- The command shapes documented in this program are the default contract. In fresh mode, do **not** spend the iteration enumerating multiple `--help` pages up front. Use the documented command first; only inspect help for a specific command after that command fails or returns an unexpected validation error.

### Devil's Advocate Protocol

After evaluating positively, argue AGAINST keeping. You MUST write a `### Devil's Advocate` section in every analysis file with exactly 3 sentences answering: "Is this actually specific? Would a strategist learn something new? Or is this obvious?" If you find flaws, reconsider. **This section is checked by mechanical validation — if absent, the analysis fails automatically.**

---

## WORKSPACE + STATE

**Your workspace:** `sessions/competitive/{client}/`
**State file:** `sessions/competitive/{client}/session.md` (read first, rewrite each iteration, max ~2K tokens)
**Results log:** `sessions/competitive/{client}/results.jsonl` (append only)

### State Management

Use this Decision Flow:
```
If no competitor data gathered → GATHER
If competitors not deep-analyzed → ANALYZE (pick next from queue)
If all competitors analyzed → SYNTHESIZE
If synthesis not verified → VERIFY
If verified and passing → set Status: COMPLETE (brief.md is the final deliverable)
```

### session.md Schema

Your session.md must contain these sections (rewrite each iteration, max ~2K tokens):

```
# Session: {client}
Context: {site}

## Current State
Competitors: N total | Data gathered: N | Analyzed: N | Synthesized: yes/no

## Priority Queue
(discover competitors in GATHER phase)

## Cross-Competitor Insights (max 800 tokens)
(named taxonomies, emergent patterns, cross-cutting themes — analytical conclusions only)

## Open Questions (max 500 tokens)
(what you're still testing or investigating)

## Dead Ends (max 300 tokens)
(approaches tried and abandoned, with brief reason)

## Learnings
(compound learning from analyzed competitors — conclusions, not data summaries)

## Status: NOT_STARTED|RUNNING|COMPLETE
```

### First Action

1. Read `sessions/competitive/{client}/session.md` — your current state
2. Read the last 10 lines of `sessions/competitive/{client}/results.jsonl` — recent experiment log
3. Decide what to do next based on file state

---

## PROTOCOLS

Choose the next action based on session state.

### GATHER Protocol

**Fresh-mode budget:** When `Strategy: fresh`, bound the gather phase aggressively so it can finish and persist:
- Gather the client baseline once.
- Infer **3 primary competitors max** for the first pass, not 5.
- For each competitor, prioritize `search-ads` first, then one `detect`, then one `visibility` call. `search-content` is optional in fresh mode if earlier steps already produced enough evidence to classify the competitor.
- Skip landing-page scrapes in fresh mode unless ad data is present and you need exactly one representative landing page to determine positioning.
- In fresh mode, partial bundles are acceptable. Once you have baseline data plus enough evidence to classify 3 competitors into tiers (`full`, `partial`, `scrape_only`, or `detect_only`), stop gathering and normalize what you have. Do **not** keep expanding scope just because some APIs failed.
- In fresh mode, use at most **one fallback step per competitor** after a primary command failure. Do not chain multiple rescue scrapes/text pulls for the same competitor before persisting the phase.
- A fresh GATHER phase is complete once `competitors/_client_baseline.json` exists, at least 3 competitor JSON files exist, `session.md` is rewritten with the queue/data tiers, and `results.jsonl` has a `gather` entry. Do not keep expanding scope after that.

1. **CLIENT BASELINE FIRST**: Before gathering competitor data, gather the CLIENT's own ad presence: `freddy search-ads <client_domain>`. Write to `competitors/_client_baseline.json`. This establishes the reference point for all comparative analysis.
2. Identify competitors from session.md (or infer 3-5 from client context if first run; in fresh mode keep the first pass to 3 primary competitors)
3. For each competitor domain:
   - Run `freddy search-ads <domain>` — variable cap: `--limit 100` for top 2 competitors, `--limit 50` for rest
   - Run `freddy detect <domain>` — **mandatory** for every competitor domain (GEO infrastructure check)
   - Run `freddy visibility "<key competitive query>"` — **mandatory** for every competitor
4. For each competitor brand: run `freddy search-content "<brand>"` (TikTok creator search)
5. Optionally: `freddy scrape <competitor_url>` for website content
6. For top 3 ads per competitor (by recency): scrape landing pages with `freddy scrape <landing_page_url>`
7. Write raw data to `competitors/{competitor_name}.json` (one file per competitor)
   - **ALSO** write raw unprocessed API response to `competitors/{competitor_name}_raw.json` — preserves full data for downstream validation
   - Competitor JSON must follow this schema:
     ```json
     {
       "name": "string (required)",
       "domain": "string (required)",
       "data_tier": "full|partial|scrape_only|detect_only (required)",
       "ads": [{"provider": "string", "platform": "string", "headline": "string", ...}],
       "visibility": {"queries": [], "results": []},
       "detect": {"llms_txt": null, "robots_txt": null, "ai_signals": []},
       "scrape": {"pages": []},
       "content": {"creators": [], "videos": []},
       "collected_at": "ISO 8601 timestamp"
     }
     ```
8. Update session.md: competitor list, data gathered count, initialize priority queue, data tier per competitor
9. Append to results.jsonl: `{"iteration": N, "type": "gather", "competitors": N, "data_tiers": {"full": N, "partial": N, "scrape_only": N}, "status": "done"}`
10. **Persist state and continue according to strategy.** In fresh mode stop after this phase. In multiturn mode continue to the next best phase.

#### Data Source Failure Protocol

After GATHER, classify each competitor's data availability into tiers and record in session.md:

| Tier | Available Data | Analysis Depth |
|------|---------------|----------------|
| **Full** | Ads + content + visibility + scrape | Deep quantitative (format %, cadence, entity structure, deployment timing) |
| **Partial** | Ads OR (visibility + scrape) | Quantitative on available axis + strategic reasoning on gaps |
| **Scrape-only** | Website scrape + AI visibility only | Positioning + pricing + GEO infrastructure + product gap analysis |
| **Detect-only** | `freddy detect` + minimal scrape | GEO infrastructure analysis only |

**Fallback cascade** (when primary sources fail):
1. `freddy search-ads` fails → `freddy scrape` competitor homepage + pricing page + `/ads.txt` + `/robots.txt`
2. `freddy search-content` fails → extract creator/partnership signals from website scrape
3. `freddy visibility` fails → `freddy scrape` competitor blog/newsroom for product launch cadence
4. All APIs fail → `freddy detect <domain>` for GEO infrastructure + `freddy scrape` + AI visibility queries. Still viable — the Figma session scored 15/16 with zero ad data.

**Never leave a section empty.** State what data you don't have, then analyze what you do have.

### ANALYZE Protocol (one competitor per iteration)

Pick the next unanalyzed competitor from the session.md priority queue.

1. Read competitor data from `competitors/{name}.json`
2. Read session.md learnings section — use insights from previously analyzed competitors
3. Extract persona patterns and emotional driver distribution from ad data (if available). Normalized ads contain `persona` and `emotional_drivers` fields.
4. Calibrate analysis depth to data tier (from GATHER):
   - **Full data**: Quantitative-first — format distribution %, deployment timing patterns, entity structure analysis, ads-per-revenue-dollar intensity, refresh cadence
   - **Partial data**: Lead with available quantitative axis, fill gaps with strategic reasoning from scrape/visibility
   - **Scrape-only**: Positioning + pricing + product gap + GEO infrastructure. Do NOT fabricate metrics. State data limitations, then go deep on what you have.
5. **Chain-of-thought pre-analysis** — before writing, answer these 5 questions in your thinking:
   - What is this competitor's apparent strategy based on data?
   - What surprised me vs my expectations?
   - What is missing from the data that I expected to find?
   - How does this competitor compare to ones I've already analyzed?
   - What would the client's Head of Marketing want to know about this competitor?
6. Produce deep competitive analysis using this **mandatory 12-section template**:
   1. Strategy & Positioning Assessment
   2. Ad Creative Patterns (formats, hooks, CTAs, refresh cadence)
   3. Deployment Timing Analysis (burst events, drip patterns, gaps)
   4. Format Distribution (rich/interactive vs static vs video %)
   5. Entity Structure (advertising entities, outsourcing signals, ads-per-entity)
   6. Intensity Metric (ads per $1B revenue or reasonable scale proxy) — label as "Competitive Ad Intensity Index" with methodology note
   7. Content & Creator Ecosystem
   8. Messaging Taxonomy — when creative samples exist, categorize messages (e.g., "performance-focused", "lifestyle", "social proof"). If N≤2 samples for a category, label as "provisional"
   9. Strengths vs Client
   10. Weaknesses vs Client
   11. Threats & Opportunities
   12. What's NOT Happening (format vacuums, absent channels, missing segments)
   - **Taxonomy guidance**: Good taxonomy = named categories with examples ("Burst+Sustain: Adidas 38 ads, 63% in 2 bursts"). Bad taxonomy = generic labels ("Type A", "Category 1").
7. **When ad data is available** (Full/Partial tier), extract these dimensions:
   - **Deployment timing**: Map ads to calendar dates. Identify burst events (>5 ads/day), drip patterns, seasonal bombs, gaps (>30 days silence). Name the pattern.
   - **Format distribution**: Calculate rich/interactive vs static vs video %. Compare across competitors.
   - **Entity structure**: List all advertising entities. Calculate ads-per-entity efficiency. Identify outsourcing signals.
   - **Intensity metric**: Ads per $1B revenue (or per reasonable scale proxy). Label as "Competitive Ad Intensity Index."
   - **Refresh cadence**: Ads per week during active periods. Distinguish burst-period from steady-state.
   - **CPM-based spend estimation**: Apply industry-average CPMs per platform per format. Label clearly as estimates with confidence range. Platform CPM benchmarks: Meta static $8-12, Meta video $12-18, Google Display $2-5, TikTok $6-10, LinkedIn $25-45. Format: "Estimated monthly spend: $15K-22K [CONFIDENCE: LOW — based on industry-average CPMs × observed ad volume]"
8. **### Devil's Advocate** — MANDATORY section. Write 3 sentences arguing against keeping this analysis. If flaws found, reconsider.
9. Evaluate the analysis quality: Is it specific and insightful? Does every claim have evidence? Would a Head of Marketing learn something new? Does it add insight beyond restating input data?
10. **KEEP** (evaluation passes):
    - Write analysis to `analyses/{name}.md`
    - Add learnings to session.md (compound learning — analytical conclusions, not data summaries)
    - Update priority queue: mark as KEPT with quality score
11. **DISCARD** (any signal fails):
    - Increment attempt counter in session.md (max 3 per competitor)
    - Note what failed and why — next attempt tries a different analytical angle
12. Append to results.jsonl: `{"iteration": N, "type": "analyze", "competitor": "name", "attempt": N, "quality_score": "X/20", "strategist_test": "PASS|FAIL", "novelty_test": "PASS|FAIL", "status": "kept|discarded"}`
13. **Persist state and continue according to strategy.** In fresh mode stop after this phase. In multiturn mode continue to the next best phase.

#### Recording Findings

After each ANALYZE iteration, update `findings.md`:
- **Confirmed**: If analysis passed all 3 signals, record the pattern
- **Disproved**: If discarded, record what failed
- **Observations**: Data availability patterns, API gaps, unexpected correlations
- Use `### [CATEGORY] Title` format with `**Evidence:**` and `**Detail:**` subfields. Valid categories: CONTENT, SCHEMA, INFRA, PROCESS, API, QUALITY.

### SYNTHESIZE Protocol

1. Read all kept analyses from `analyses/*.md`
2. Read session.md learnings (compound insights across all competitors)
3. **Pre-synthesis comparison matrix (write to session.md, max 10 rows):** Before writing any section, produce: (1) All competitors with key metrics in a table, (2) Which cluster together and why, (3) What is NO competitor doing, (4) Name the emergent taxonomy.
4. **Cross-competitor pattern synthesis (MANDATORY)**:
   Before writing sections, look ACROSS all analyses for emergent patterns:
   - What deployment/behavior archetypes exist? Name them. (e.g., "Burst+sustain", "Drip-burst hybrid", "Dump-and-coast")
   - What taxonomies emerge? Build a framework with named categories. Every synthesis must produce at least one named taxonomy.
   - What is NO competitor doing? Uncontested space = most actionable finding.
   - Which competitors cluster together? Outliers? What explains clustering?
   - What entity/organizational structure patterns correlate with quality or volume?
   - Build at least one comparison table normalizing across competitors.
5. **Word budget**: Write brief.md targeting 1500-1800 words total. Build tight from the start — do NOT write a 4000+ word draft and then trim. Rough budget: executive summary 200w, SOV section 100w, per-competitor section 200w each, recommendations 300w, known unknowns + monitoring triggers 200w. Include ≥2 verbatim quoted ad headlines per competitor with ad data; ≥1 verbatim website quote for scrape-only competitors.

6. Produce competitive brief with these sections:
   - **Executive Summary** — the "so what?" in 1-2 paragraphs. Open with the single most actionable finding. Lead with a specific competitive gap or opportunity, not a scene-setter. Include a **strategic narrative arc**: "Competitor X is doing A, which means B for the client, creating window C that closes by D."
   - **Share of Observed [Platform] Ad Volume** — SOV % breakdown per competitor; include numeric % estimate for each (e.g., "~30%"), labeled with data source and "estimated" where appropriate.
   - **Competitive Positioning** — how each competitor is positioned based on OBSERVED DATA (ad messaging, website copy, pricing pages, product features). Do NOT rely on brand self-description or marketing slogans. Base positioning on what competitors actually DO, not what they SAY.
   - **Competitor Ads** — specific ad creative analysis with patterns
   - **Content & Creator Ecosystem** — what content competitors produce, creator reach
   - **Creative Patterns** — hooks, CTAs, pacing, narrative structures, refresh cadence. Include taxonomy/archetypes from step 4.
   - **Format Vacuum / What's NOT Happening** — explicitly identify formats, channels, or tactics that zero competitors are using. For each vacuum, include a **counterfactual**: "Why might competitors NOT use [format]? Possible reasons: [cost, audience mismatch, platform limitation]. Assessment: [opportunity vs irrelevant]."
   - **Known Unknowns** — explicitly list what you don't know and why it matters. E.g., "Unknown: Competitor X's TikTok spend — ScrapeCreators returned 0 results. Impact: SOV estimates may undercount by 10-20%."
   - **Changes vs Prior** — delta from prior brief. If `prior_brief_summary.json` exists, reference specific metric changes. If first brief, state "Baseline brief — no prior comparison available."
   - **Recommendations** — 3-5 specific, data-backed, time-bound, differential. Each must include:
     - A specific timeframe ("by April 18", not "soon")
     - A BECAUSE clause referencing a specific competitor action/inaction
     - A window-closing argument (what happens if client waits)
     - A measurable target
     - A "could be wrong if..." qualifier
     - A corresponding **competitive response model** — "If client does X, competitor Y will likely respond with Z within [timeframe], because [evidence]." 90-day projection timeline.
   - **Monitoring Triggers** — specific thresholds per recommendation:
     ```
     | Trigger | Threshold | Implication |
     |---------|-----------|-------------|
     | [Competitor] [metric] | [specific number] | [what it means for client] |
     ```
6. Write to `brief.md`
8. Update session.md: synthesized=yes
9. Append to results.jsonl: `{"iteration": N, "type": "synthesize", "sections": N, "taxonomies_built": N, "status": "done"}`
9. **Persist state and continue according to strategy.** In fresh mode stop after this phase. In multiturn mode continue to the next best phase.

### VERIFY Protocol (absorbs DELIVER)

1. Read `brief.md`
1a. **GROUNDING GUARD** — before running the evaluator, scan brief.md for verbatim source quotes. For each competitor that has ads, at least one ad headline must appear verbatim (in `"double quotes"`) in brief.md. For scrape-only competitors, at least one verbatim website copy phrase must appear. If any competitor lacks verbatim evidence, add the missing quotes now — do not proceed to evaluation without them. The outer grounding check assigns score=0 when no source quotes are present, regardless of evaluator decision.
2. If `eval_feedback.json` exists, read it first. Otherwise run:
   ```bash
   python3 scripts/evaluate_session.py --domain competitive --artifact sessions/competitive/{client}/brief.md --session-dir sessions/competitive/{client}/ > sessions/competitive/{client}/eval_feedback.json
   ```
3. Read the evaluator JSON: if it says `REWORK`, address the failed criteria feedback and regenerate only those sections. If it says `KEEP`, still verify the brief with your analytical judgment — is it specific, insightful, and actionable?
4. **Quality threshold**: Evaluator decision is `KEEP` AND your judgment confirms quality. Missing evaluator output counts as `REWORK`, not pass.
5. If threshold NOT met: identify weak sections, regenerate only those sections in `brief.md`. Can rework up to 2 times.
6. If threshold met:
   - `brief.md` is the final deliverable — do not write a separate `report.md`. The CLI scorer reads only `brief.md`, and a duplicate `report.md` has historically drifted from `brief.md` in ways the evaluator cannot see.
   - Set `## Status: COMPLETE` in session.md
7. Update session.md: verified=yes, quality score
8. Append to results.jsonl: `{"iteration": N, "type": "verify", "quality_score": "X/20", "critical_pass": true|false, "weighted_score": N, "strategist_test": "PASS|FAIL", "attempt": N, "status": "pass|rework|complete"}`
9. **Persist state and continue according to strategy.** In fresh mode stop after this phase. In multiturn mode continue to the next best phase.

If the session stops before VERIFY/COMPLETE, do not assume any extra shell-managed cleanup. Only files you have actually written are guaranteed to exist.

### Exit Checklist (mandatory before setting Status: COMPLETE)

Before writing `## Status: COMPLETE`, verify ALL:
1. `findings.md` has at least 1 entry under "## Confirmed" with evidence from this session
2. The deliverable file exists (`brief.md` — there is no separate `report.md`)
3. `results.jsonl` has at least 1 entry per completed phase
4. Session evaluator `eval_feedback.json` shows `decision: "KEEP"` (or was addressed if `REWORK`)
5. `### Devil's Advocate` section present in every analysis file

6. brief.md contains verbatim source quotes: ≥2 ad headlines per competitor with ad data, ≥1 website copy phrase per scrape-only competitor — verified by reading brief.md against competitors/*.json, not assumed

If findings.md is empty, you are NOT done.

### Exit Protocol

After completing a phase:
1. Update session.md with new state. Store ANALYTICAL CONCLUSIONS and named frameworks — not data summaries.
2. Append to results.jsonl
3. In fresh mode, stop after persisting the phase.
4. In multiturn mode, continue to the next best phase without waiting for a restart.

### API Failure Handling

If a `freddy` command fails, log in results.jsonl with `"status": "blocked"` and the reason. Do NOT re-attempt the same failed command within a single iteration; move to the fallback cascade, or proceed to the next action.

---

## TOOLS + REMINDERS

### Tools

- `freddy search-ads <domain>` — competitor ads via Foreplay (Meta, TikTok, LinkedIn ads) + Adyntel (Google Display). Returns ad objects with: provider, platform, headline, body_text, cta_text, link_url, image_url, video_url, is_active, started_at, data_quality. Parse `started_at` dates for deployment timing. Parse `headline` for entity names. Parse `body_text` for format classification.
- `freddy query-monitor <monitor_id> --metric <sov|sentiment|topics>` — monitoring analytics
- `freddy search-content <query>` — search competitor content across platforms
- `freddy save <client> <key> <data>` — persist to session
- `freddy scrape <url>` — fetch competitor web pages (reused from GEO)
- `freddy detect <url>` — check competitor SEO/GEO infrastructure (reused from GEO)
- `freddy visibility "<query>"` — check AI search visibility for competitive keywords (reused from GEO)

### Ad Data Analysis Guidance

When `search-ads` returns results, extract maximum value:
1. **Group ads by `started_at` date** — cluster same-day deploys as "burst events"
2. **Group ads by `headline`** — headline usually = advertising entity name. Multiple entities per competitor = hub-and-spoke or outsourced model
3. **Classify format** from `body_text`: JS/dynamic = rich/interactive, `<img>` = static image, `video_url` present = video
4. **Calculate**: total ads, rich %, video %, ads/week, ads/entity, largest single-day deploy
5. **Identify outsourcing signals**: entity names that are agencies vs brand subsidiaries
6. **Look for anomalies**: tracking pixels (tiny dimensions), long gaps between deploys, sudden cadence changes
7. **Intensity metric**: Always qualify as "Competitive Ad Intensity Index" — not an industry standard metric, it's our internal normalizer

### Prior Brief Versioning

If `prior_brief_summary.json` exists in the session directory, read it at the start of SYNTHESIZE. Use it for real "Changes vs Prior" deltas — compare current metrics against prior values. If it doesn't exist, note "Baseline brief — no prior comparison available."

### Rules

- **Fresh mode = one phase. Multiturn mode = continuous phases.** In fresh mode do exactly one iteration type, persist state, and stop. In multiturn mode complete one phase at a time but keep moving until the session reaches VERIFY/COMPLETE or a real blocker.
- NEVER stop to ask for confirmation. NEVER ask "should I continue?" Keep working.
- **One competitor per ANALYZE phase.** Don't batch. Don't analyze extras in the same phase.
- When stuck: re-read competitor data for angles you missed, combine insights from multiple sources, try different frameworks.
- Keep CLI tool output concise. Don't flood your context with raw data.
- Equal or worse = DISCARD. Only strictly improved results are kept.
- A specific insight = [competitor name] + [concrete action/metric] + [implication for client]. Generic observations are worthless.
- Recommendations must be differential — "do X BECAUSE competitor Y is/isn't doing Z."
- Actively try deletion experiments. Removing generic filler often improves quality more than adding content.
- **session.md max ~2K tokens.** Rewrite, don't append.

### SYNTHESIZE CRITICAL REMINDERS

These are the top constraints most likely to be forgotten mid-generation. Re-read before writing each section:

1. **SOV = "Share of Observed [Platform] Ad Volume"** — never unqualified "Share of Voice"
2. **Every number needs a source** — no naked statistics
3. **Confidence tags required** — HIGH/MEDIUM/LOW on every finding
4. **Recommendations need "could be wrong if..."** — one sentence invalidation condition
5. **Format vacuums need counterfactuals** — "why might competitors NOT use this?"

## Escape Hatch (HARD RULE)

After 7 iterations total (any combination of GATHER/ANALYZE), if >= 2 analyzed competitors exist in `competitors/*.json`, you MUST proceed to SYNTHESIZE. This is a hard rule, not optional guidance. Count iterations by reading `results.jsonl` line count — each line with `"type": "gather"` or `"type": "analyze"` counts as one iteration. Do not spend further iterations gathering or analyzing once this threshold is reached.
